--- a/2TDSPR25/2TDSPR25.csproj
+++ b/2TDSPR25/2TDSPR25.csproj
@@ -9,7 +9,9 @@
 
     <ItemGroup>
       <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="10.0.3" />
+      <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="10.0.3" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="10.0.3" />
+      <PackageReference Include="Scalar.AspNetCore" Version="2.12.46" />
     </ItemGroup>
 
 </Project>
